cmake_minimum_required(VERSION 3.27)
project(C++)

set(CMAKE_CXX_STANDARD 17)

add_executable(PROJECT Project1.cpp)

add_executable(Tests Tests.cpp)

add_executable(KOLOKWIUM1-1 KOLOKWIUM1-1.cpp)
add_executable(KOLOKWIUM1-2 KOLOKWIUM1-2.cpp)
add_executable(KOLOKWIUM1-3 KOLOKWIUM1-3.cpp)
add_executable(KOLOKWIUM1-4 KOLOKWIUM1-4.cpp)
add_executable(KOLOKWIUM1-5 KOLOKWIUM1-5.cpp)

add_executable(1 1.cpp)
add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(6 6.cpp)
add_executable(7 7.cpp)
add_executable(8 8.cpp)
add_executable(9 9.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(12 12.cpp)
add_executable(13 13.cpp)
add_executable(14 14.cpp)
add_executable(15 15.cpp)
add_executable(16 16.cpp)
add_executable(17 17.cpp)
add_executable(18 18.cpp)
add_executable(21 21.cpp)
add_executable(22 22.cpp)
add_executable(23 23.cpp)
add_executable(24 24.cpp)
add_executable(25 25.cpp)
add_executable(26 26.cpp)
add_executable(27 27.cpp)
add_executable(28 28.cpp)
add_executable(29 29.cpp)
add_executable(30 30.cpp)
add_executable(31 31.cpp)
add_executable(32 32.cpp)
add_executable(33 33.cpp)
add_executable(34 34.cpp)
add_executable(35 35.cpp)
add_executable(36 36.cpp)
add_executable(37 37.cpp)
add_executable(38 38.cpp)
add_executable(39 39.cpp)
add_executable(40 40.cpp)
add_executable(41 41.cpp)
add_executable(42 42.cpp)
add_executable(43 43.cpp)
add_executable(44 44.cpp)
add_executable(45 45.cpp)
add_executable(46 46.cpp)
add_executable(47 47.cpp)
add_executable(48 48.cpp)
add_executable(49 49.cpp)
add_executable(50 50.cpp)
add_executable(51 51.cpp)